--- a/Projects/ContentSamples/project.json
+++ b/Projects/ContentSamples/project.json
@@ -49,7 +49,8 @@
         "QtForPython",
         "ReferenceMaterials",
         "Terrain",
-        "Vegetation"
+        "Vegetation",
+        "LookDevStudio==1.0.0"
     ],
     "engine_version": "1.2.0"
 }
