no look dev level fixed up
Signed-off-by: HogJonny-AMZN <gallowj@amazon.com>

--- a/Projects/ContentSamples/project.json
+++ b/Projects/ContentSamples/project.json
@@ -50,7 +50,7 @@
         "ReferenceMaterials",
         "Terrain",
         "Vegetation",
-        "LookDevStudio==1.0.0"
+        "LookDevStudio"
     ],
     "engine_version": "1.2.0"
 }
